# BitLab-AI-Asistent

./: .env.example  .env.openclaw  .gitattributes  .gitignore  .pre-commit-config.yaml  BITLAB-MVP-PLAN.md  CLAUDE.md  DEPLOY.md  EVAL-REFACTOR-PLAN-v2.md  EVAL-REFACTOR-PLAN.md  EVAL-failure-analysis-2026-05-23.md  EVAL-ids-tags-plan.md  EVAL-testing-plan.md  EVAL_OPTIMIZACIJA.md  EVAL_REGRESIJA_iter17.md  HOSTING.md  LIVE.md  PLAN.md  PRODUCTION-PREP-PLAN.md  README.md  RESTORE.md  SECURITY-REVIEW.md  SERVER-DEPLOY-PLAN.md  SSOT-categories-refactor-plan.md  STATUS-HUMAN.md  STATUS.md  TEST-channel-model-effort.md  TEST-failures-pwr-migration.md  TEST-pwr-backend.md  TEST-srcv-structured-output.md  TEST_category-parent_id_fix.md  pyproject.toml  scan.sh
.github/workflows/: ci.yml  e2e.yml  eval-nightly.yml
app/: __init__.py  agent.py  brands.py  config.py  main.py  rag.py  schemas.py  system_prompts.py  tools.py
app/server/: dashboard.py
app/storage/: db.py  models.py  repo.py
bck/app/: categories.py  contacts.py  email_poller.py  faq.py  system_prompts.py  tools.py
bck/dashboard/: .dockerignore
bck/data/: brend.json  category_terms.json  faq.md
bck/deploy/: README.md  RUNBOOK-prod.md  RUNBOOK-services.md  bitlab-ai.service  n8n-prod.service
bck/evals/: README.md  run_products.py
bck/scripts/: audit_missing_images.py  migrate_session_id.py  pull_from_mysql.py  smoke_test.py
bck/tests/: test_anthropic_error_handlers.py  test_brand_category_search.py  test_eval_sets_schema.py  test_gen_categories_eval.py  test_tools.py  test_voice_tag_sanitization.py  test_widget_renderer.mjs
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  tokens.ts
data/: categories.csv  categories.json  categories_new.json  category_label_overrides.json  category_terms.json  missing_images.json
deploy/: MANUAL-setup-domain.md  README.md  n8n-prod.service  n8n-staging.service  nginx-site.conf  prod.env.example  staging.env.example
design_handoff_conduit/: SCREENS.md
design_handoff_conduit/prototype/: app.jsx  components.jsx  data.js  views-1.jsx  views-2.jsx
docs/: Otvorena pitanja sa Google Drive-a.md  PITCH-BRIEF-V2-ENGINEER.md  PROD-ACCESS.md  PROMPT-BEST-PRACTICES.md  README.md  STAGING-ACCESS.md  architecture.md  changes.md  eval-infra-changelog.md  eval-infra-review.md  fb-funnel-progress.md  getting-started.md  voice.md
docs/archive/: README.md
docs/archives/: status-2026-05-17.md
docs/category-analysis/: e2e-run-mock.html
docs/dan4/: 06_n8n_Webhook_Vodic_Dan4.docx  demo_agent.py  demo_widget.html
docs/features/: ai-search-improvements.md  category-routing.md  logging-dashboard.md  sessions.md
docs/how-to-test/: TEST-voice-off.md
docs/operations/: PROD-ACCESS.md  gmail-oauth-setup.md  n8n-odluka.md  n8n-setup.md
docs/plans/: akcioni-plan.md  growth.md
docs/reviews/: code-review.md
evals/: README.md  _cli_filters.py  category_eval.json  parent_eval_set.json  run_categories.py  run_categories_cli.py  run_e2e_html.py  run_products.py  test_questions.json  visualize_parent_expansion.py  visualize_parent_runtime.py
evals/archives/: run.py  run_categories_html.py  run_cli.py  run_format.py  test_questions.json  visualize_parent_expansion.py
evals/framework/: __init__.py  budget.py  cache.py  client.py  errors.py  judge.py  loader.py  reporter.py  runner.py  sampler.py  types.py
evals/runs/: categories-acpt-full-20260531-015049.html  categories-acpt-full-20260531-015635.html  categories-acpt-full-20260531-043836.html  categories-acpt-full-20260531-050611.html  categories-acpt-full-20260531-051825.html  categories-acpt-full-20260531-053116.html  categories-acpt-full-20260531-054025.html  categories-acpt-full.jsonl  categories-ralph-iter17-prompt-fix-A-20260525-185416.html  categories-ralph-iter17-prompt-fix-A-20260525-224425.html  categories-ralph-iter17-prompt-fix-A.jsonl  categories-ralph-iter17-prompt-fix-final-20260526-001316.html  categories-ralph-iter17-prompt-fix-final-20260526-034034.html  categories-ralph-iter17-prompt-fix-final-20260526-045302.html  categories-ralph-iter17-prompt-fix-final-20260526-050344.html  categories-ralph-iter17-prompt-fix-final-20260526-052108.html  categories-ralph-iter17-prompt-fix-final-20260526-084556.html  categories-ralph-iter17-prompt-fix-final-20260526-100856.html  categories-ralph-iter17-prompt-fix-final-20260526-102625.html  categories-ralph-iter17-prompt-fix-final-20260526-134911.html  categories-ralph-iter17-prompt-fix-final-20260526-145219.html  categories-ralph-iter17-prompt-fix-final-20260526-150956.html  categories-ralph-iter17-prompt-fix-final-20260526-153134.html  categories-ralph-iter17-prompt-fix-final-20260526-190321.html  categories-ralph-iter17-prompt-fix-final-20260526-195611.html  categories-ralph-iter17-prompt-fix-final.jsonl  categories-ralph-iter18-prompt-fix-B-20260525-230755.html  categories-ralph-iter18-prompt-fix-B-20260525-234440.html  categories-ralph-iter18-prompt-fix-B-20260525-235817.html  categories-ralph-iter18-prompt-fix-B.jsonl  (+30 more)
n8n/: email-autoreply.json
public/: voice.html  widget.html  widget.js
ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  PAUSE  PROMPT_build.md  PROMPT_plan.md  estimate_reset.py  ralph-plan.sh  ralph.sh  status.sh  wait_pause.py
scripts/: __init__.py  build_categories.py  build_category_terms.py  deploy.sh  embed_products.py  gen_categories_eval.py  gen_dev_sample.py  init_db.py  refresh_index.sh  smoke.py
specs/: categories.md  cross-reference.md  products.md
tests/: conftest.py  test_brand_category_search.py  test_categories_ssot.py  test_cli_filters.py  test_custom_build_response.py  test_image_url_filter.py  test_parent_expansion.py  test_response_schema.py  test_tts_normalization.py  test_typo_robustness.py  test_voice_tag_sanitization.py  test_widget_renderer.mjs
tests/e2e/: test_smoke.py
(+132 files in other folders)
