[project]
name = "bitlab-ai-asistent"
version = "0.1.0"
description = "BitLab AI Asistent — chat widget + voice + email auto-reply nad webshop.bitlab.rs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    # OpenAI SDK — koristimo za LLM_BACKEND=pwr (rutiranje kroz PlaywrightRouter,
    # OpenAI-kompatibilan endpoint). Vidi app/agent.py:_run_pwr.
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # sentence-transformers: PIN-OVANO. v3.4.x je stabilna API + bez
    # sparse_encoder bloat-a iz v5.x (~30s import vrijeme).
    # NIKAD ne otvaraj opseg (npr. ">=3.3,<4.0") jer minor verzije mogu
    # tihog promijeniti embed init obrazac (vidi torch napomenu ispod).
    "sentence-transformers==3.4.1",
    "rank-bm25>=0.2.2",
    "numpy>=2.0",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
    # CPU-only torch: na CPU-u smo, CUDA wheel (~1.2GB) ne treba.
    # Instaliraj sa: pip install -e . --extra-index-url https://download.pytorch.org/whl/cpu
    #
    # PIN-OVANO na 2.11.0 jer torch tihog mijenja init obrazac za module
    # između minor verzija. Prošli incident (2026-05): otvoreni opseg
    # ">=2.4,<3.0" je pokupio noviju verziju kroz `pip install -e .`,
    # `device="cpu"` u SentenceTransformer konstruktoru počeo da baca
    # `NotImplementedError: Cannot copy out of meta tensor`. Pin ovde +
    # smoke test u main.py:_warmup_rag_sync = ne ponavlja se.
    "torch==2.11.0",
    # Voice/audio (lazy-loaded u main.py — ne usporavaju startup)
    "faster-whisper>=1.1",
    "edge-tts>=7.0",
    # Dashboard storage (Sesija 8 — async SQLAlchemy nad SQLite)
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    # Playwright je heavy install (~200MB browseri) — instaliraj samo na e2e mašini:
    # pip install -e ".[e2e]" && playwright install chromium
]
e2e = [
    "playwright>=1.48",
]
mysql = [
    "pymysql>=1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "evals*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
files = ["app", "evals/framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default isključuje sporo (e2e), opt-in (eval), skupo (anthropic_api).
# CI pokreće "unit or integration"; e2e ima poseban job; eval ide nightly.
addopts = "-q -m 'not e2e and not eval and not anthropic_api'"
markers = [
    "unit: brze, čiste funkcije, no I/O",
    "integration: FastAPI TestClient + mock Anthropic (no real LLM)",
    "e2e: Playwright browser → widget → /api/chat (sporo, opt-in)",
    "regression: snapshot entry-ji koji su jednom prošli eval, nikad ne smiju da padnu",
    "eval: real-LLM eval suite (opt-in, ne u default CI)",
    "anthropic_api: testovi koji zovu pravi Anthropic API (skup, ~$0.02 po test)",
]

[tool.coverage.run]
source = ["app", "evals/framework"]
omit = ["*/__init__.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
